<resources>
    <string name="app_name">TTMA</string>

    <string name="hello_world">En cours de développement...</string>
    <string name="action_settings">Settings</string>

    <string name="quitter">Etes-vous sûr de vouloir quitter l\'application ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="vide">Le champ est vide</string>
    <string name="valider">Valider</string>
    <string name="login">Login</string>
    <string name="pwd">Mot de passe</string>
    <string name="sinscrire">S\'inscrire</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="cin">CIN</string>
    <string name="adresse">Adresse</string>
    <string name="mapKey">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
</resources>
