<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity"
    android:background="@drawable/fond"
    android:orientation="vertical"
    android:weightSum="5">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/nom"
            android:text="@string/nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="10dp"
        >
        <EditText
            android:id="@+id/txtnom"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:inputType="textImeMultiLine"/>
    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/prenom"
            android:text="@string/prenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="10dp"
        >
        <EditText
            android:id="@+id/txtprenom"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:inputType="textImeMultiLine"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/cin"
            android:text="@string/cin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="10dp"
        >
        <EditText
            android:id="@+id/txtcin"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:inputType="textImeMultiLine"/>
    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/adresse"
            android:text="@string/adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="10dp"
        >
        <EditText
            android:id="@+id/txtadresse"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:inputType="textImeMultiLine"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/login"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="10dp"
        >
        <EditText
            android:id="@+id/txtlogin"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:inputType="textImeMultiLine"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/pwd"
            android:text="@string/pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="10dp"
        >
        <EditText
            android:id="@+id/txtpwd"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:inputType="textImeMultiLine"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/valider"
            android:text="@string/valider"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/zero"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />


    </LinearLayout>

</LinearLayout>
    </ScrollView>
</LinearLayout>